Not working version. Total refactoring of entities, dto, services and controllers.